[gd_scene load_steps=6 format=3 uid="uid://buxubhcygkl85"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_0av2d"]
[ext_resource type="Shader" path="res://assets/shaders/blur_01.gdshader" id="2_hshuo"]
[ext_resource type="Texture2D" uid="uid://badtq3ewxdp17" path="res://assets/target_priority_btn_01.png" id="3_xwqvu"]
[ext_resource type="Texture2D" uid="uid://dnck77x27ynfo" path="res://assets/target_priority_btn_01_hover.png" id="4_1t8gk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_75mjb"]
shader = ExtResource("2_hshuo")
shader_parameter/blur_amount = 1.0
shader_parameter/mix_amount = null
shader_parameter/color_over = null

[node name="OptionsMenu" type="Control"]
custom_minimum_size = Vector2(144, 144)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -72.0
offset_right = 72.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0av2d")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_75mjb")
custom_minimum_size = Vector2(144, 144)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TargetPriority" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_xwqvu")
texture_hover = ExtResource("4_1t8gk")

[node name="Options2" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Options3" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Options4" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[connection signal="mouse_entered" from="MarginContainer/VBoxContainer/HBoxContainer/TargetPriority" to="." method="_on_target_priority_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/HBoxContainer/TargetPriority" to="." method="_on_target_priority_mouse_exited"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TargetPriority" to="." method="_on_target_priority_pressed"]
